BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Company_Code_Details_HCPTS__c.object
<CustomObject>
    <description>Company Code Details for EM</description>
    <fields>
        <fullName>Active_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Company Code</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code_HCPTS__c</fullName>
        <description>2 character Country code supplied by Integration feed</description>
        <inlineHelpText>2 character Country code supplied by Integration feed</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_HCPTS__c</fullName>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_HCPTS__c</fullName>
        <description>Company Code Start Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_HCPTS__c</fullName>
        <description>Company Code External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_of_Company_HCPTS__c</fullName>
        <description>Name of Company</description>
        <label>Name of Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Code_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Code Details</label>
        <referenceTo>Plant_Code_Details_HCPTS__c</referenceTo>
        <relationshipLabel>Company Code Details</relationshipLabel>
        <relationshipName>Company_Code_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Org_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Org Details</label>
        <referenceTo>Purchase_Org_Details_HCPTS__c</referenceTo>
        <relationshipLabel>Company Code Details</relationshipLabel>
        <relationshipName>Company_Code_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_HCPTS__c</fullName>
        <description>Company Code Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Company Code Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_HCPTS__c</columns>
        <columns>Active_HCPTS__c</columns>
        <columns>Purchase_Org_HCPTS__c</columns>
        <columns>Plant_Code_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Company Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Code Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>